[package]
name = "shabal"
version = "0.1.0"
authors = ["bold <bold@cryptoguru.com>"]
license = "MIT OR Apache-2.0"
description = "Shabal hash functions"
documentation = "https://docs.rs/shabal"
repository = "https://github.com/spebern/shabal-rs"
keywords = ["crypto", "shabal", "hash", "digest"]
categories = ["cryptography", "no-std"]

[dependencies]
digest = "0.8"
block-buffer = "0.7"
opaque-debug = "0.2"
crunchy = "0.2"

[dev-dependencies]
digest = { version = "0.8", features = ["dev"] }
hex-literal = "0.1"

[features]
default = ["std"]
std = ["digest/std"]